# generative

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  eval.py  load_data.py  load_doc_data.py  load_dog_data.py  pyproject.toml  run_train_doc.sh  sr_trainer.py  srresnet_trainer.py  trainer.py  visualize.py
src/gan/: conditional_generator.py  discriminator.py  generator.py  hed.py  srresnet.py  utils.py  vgg.py
